# telemetry

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  main.cpp
nix/: telemetry.nix
